@@ -16,29 +16,29 @@
 \alias{ungroup.plotly}
 \title{Data manipulation verbs for plotly.}
 \usage{
-groups.plotly(x)
+\method{groups}{plotly}(x)
 
 \method{group_by_}{plotly}(.data, ..., .dots, add = FALSE)
 
-ungroup.plotly(x)
+\method{ungroup}{plotly}(x)
 
-summarise_.plotly(.data, ..., .dots)
+\method{summarise_}{plotly}(.data, ..., .dots)
 
-mutate_.plotly(.data, ..., .dots)
+\method{mutate_}{plotly}(.data, ..., .dots)
 
 \method{arrange_}{plotly}(.data, ..., .dots)
 
-select_.plotly(.data, ..., .dots)
+\method{select_}{plotly}(.data, ..., .dots)
 
-filter_.plotly(.data, ..., .dots)
+\method{filter_}{plotly}(.data, ..., .dots)
 
 \method{distinct_}{plotly}(.data, ..., .dots)
 
-slice_.plotly(.data, ..., .dots)
+\method{slice_}{plotly}(.data, ..., .dots)
 
-rename_.plotly(.data, ..., .dots)
+\method{rename_}{plotly}(.data, ..., .dots)
 
-transmute_.plotly(.data, ..., .dots)
+\method{transmute_}{plotly}(.data, ..., .dots)
 }
 \description{
 Data manipulation verbs for plotly.
